# panoptes

./: .dockerignore  .gitignore  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  artifacthub-repo.yml
.devcontainer/: devcontainer.json  on-create.sh  post-install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daemons.yaml  operators.yaml  proto.yaml  release.yaml  sbom.yaml  security.yml
benchmarks/: Dockerfile.event-generator  Makefile  README.md  docker-compose.yml
benchmarks/scripts/: build-containers.sh  compare-impls.sh  run-benchmarks.sh  run-container-bench.sh
benchmarks/src/: event-generator.c
charts/panoptes/: Chart.yaml  values.yaml
charts/panoptes-argus/: values.schema.json  values.yaml
charts/panoptes-janus/: values.schema.json  values.yaml
daemons/: .gitignore  deny.toml
daemons/argusd/: Cargo.toml  Dockerfile  Dockerfile.c  Dockerfile.rust  README.md  build.rs
daemons/argusd/ebpf/: Cargo.toml
daemons/argusd/ebpf/.cargo/: config.toml
daemons/argusd/ebpf/src/: main.rs
daemons/argusd/rust/: .gitignore  Cargo.toml  README.md  build.rs
daemons/argusd/rust/ebpf/: Cargo.toml
daemons/argusd/rust/ebpf/src/: main.rs
daemons/argusd/rust/src/: main.rs  metrics.rs  notify.rs  service.rs  service_ebpf.rs
daemons/argusd/rust/src/ebpf/: events.rs  mod.rs
daemons/argusd/rust/tests/: integration_tests.rs
daemons/common/: Cargo.toml  EBPF.md
daemons/common/cmake/: Dependencies.cmake
daemons/common/lib/: CMakeLists.txt  container_runtime.c  container_runtime.h
daemons/common/rust/: .gitignore  Cargo.toml
daemons/common/rust/src/: broadcast.rs  container_runtime.rs  grpc.rs  lib.rs  paths.rs  proc.rs
daemons/common/rust/src/ebpf/: loader.rs  mod.rs
daemons/common/rust/src/ebpf/kernel/src/: filtering.rs  helpers.rs  lib.rs  maps.rs  path.rs
daemons/common/rust/src/ebpf/types/: Cargo.toml
daemons/common/rust/src/ebpf/types/src/: lib.rs
daemons/common/src/: broadcast.rs  capabilities.rs  container_runtime.rs  ebpf_support.rs  environment.rs  error.rs  glog.rs  grpc.rs  lib.rs  metrics.rs  paths.rs  proc.rs  resource_limits.rs  session.rs
daemons/common/src/ebpf/: loader.rs  mod.rs
daemons/common/src/ebpf/kernel/: Cargo.toml
daemons/common/src/ebpf/kernel/src/: helpers.rs  lib.rs  maps.rs  offsets.rs  path.rs  process.rs  task.rs
daemons/common/src/ebpf/types/: Cargo.toml
daemons/common/src/ebpf/types/src/: lib.rs
daemons/janusd/: Cargo.toml  Dockerfile  Dockerfile.c  Dockerfile.rust  README.md  build.rs
daemons/janusd/benches/: policy_evaluation.rs
daemons/janusd/c/: CMakeLists.txt
daemons/janusd/c/include/: janusaudit.h  janusnotify.h
daemons/janusd/c/lib/: janusaudit.c  janusaudit.h  janusnotify.c  janusnotify.h  janusutil.c  janusutil.h
daemons/janusd/c/src/: health_impl.h  janusd_impl.cc  janusd_impl.h  janusd_server.cc
daemons/janusd/ebpf/: Cargo.toml
daemons/janusd/ebpf/src/: main.rs
daemons/janusd/rust/: Cargo.toml  README.md  build.rs
daemons/janusd/rust/benches/: policy_evaluation.rs
daemons/janusd/rust/ebpf/: Cargo.toml
daemons/janusd/rust/ebpf/src/: main.rs
daemons/janusd/rust/src/: audit.rs  dedupe.rs  guard.rs  main.rs  metrics.rs  policy.rs  service.rs  service_ebpf.rs
daemons/janusd/rust/src/ebpf/: events.rs  mod.rs
daemons/janusd/src/: audit.rs  dedupe.rs  guard.rs  main.rs  metrics.rs  policy.rs  service.rs  service_ebpf.rs
daemons/janusd/src/ebpf/: events.rs
daemons/janusd/tests/: integration_tests.rs
deploy/: README.md  argusd-daemonset.yaml  janusd-daemonset.yaml  kustomization.yaml  namespace.yaml  panoptes-eye.yaml
deploy/assessment/: README.md  job.yaml  rbac.yaml
deploy/compliance/: README.md
deploy/monitoring/: README.md  grafana-dashboard.json  prometheus-alerts.yaml
docs/: C_TO_RUST_MIGRATION.md  FUTURE_STATE.md  HELM_QUICK_START.md  QUICK_START.md  README.md  SPECTRO_QUICK_START.md  WEBHOOK_DEPLOYMENT.md
docs/adr/: 0001-inotify-over-ebpf-for-fim.md  0002-rust-for-daemons.md  0003-crd-per-compliance-framework.md  0004-fanotify-for-access-control.md  0005-no-built-in-siem.md
docs/api/: arguswatcher-v2.md  janusguard-v2.md
docs/compliance-templates/: README.md  base-security.yaml  cis-kubernetes.yaml  hipaa.yaml  pci-dss.yaml  soc2.yaml
docs/guides/: enabling-enforcement.md  monitoring-alerting.md  monitoring-by-compliance.md  multi-cluster.md  overlapping-resources.md  quick-start-security.md  quickstart-compliance.md  quickstart-incident-detection.md  quickstart-platform-hardening.md  troubleshooting.md  what-to-monitor.md
docs/operations/: README.md  kernel-tuning.md
docs/security/: README.md  advanced-hardening.md  attack-surface-analysis.md  cryptographic-guarantees.md  network-monitoring-roadmap.md  privileged-container-justification.md  remediation-plan.md  rust-security-practices.md  threat-model.md  vulnerability-response.md
examples/: README.md
examples/credential-theft-detection/: README.md  attacker-simulation.yaml  demo.sh
examples/detect-container-breakout/: README.md  arguswatcher.yaml  demo.sh  vulnerable-pod.yaml
examples/hipaa-ephi-protection/: README.md  demo.sh  ephi-workload.yaml
examples/integrations/: README.md
examples/lib/: demo-common.sh
examples/pci-dss-in-3-commands/: README.md  demo.sh  workload.yaml
examples/runtime-file-integrity-alert/: README.md  demo.sh  nginx-monitored.yaml
hack/: README.md  argusd-daemonset.yaml  demo.sh  janusd-daemonset.yaml  kind-config-devcontainer.yaml  kind-config-wsl.yaml  kind-config.yaml  local-deploy.sh  local-wsl-deploy.sh  panoptes-eye-local.yaml  spectro-deploy.sh
operators/argus-operator/: Dockerfile  Makefile  PROJECT  README.md  go.mod
operators/common/: README.md  go.mod  go.sum
operators/janus-operator/: Dockerfile  Makefile  (+3 more)
packs/: .gitignore  Makefile
proto/: Makefile  README.md  buf.gen.yaml  buf.yaml
tools/watcher-wait/: Cargo.toml  Dockerfile  README.md  build.rs
tools/watcher-wait/src/: main.rs
(+350 files in other folders)
