[package]
name = "panoptes-common"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared utilities for Panoptes daemons - container runtime detection and process info resolution"
repository = "https://github.com/panoptes-project/panoptes"
keywords = ["kubernetes", "containers", "security", "fim"]
categories = ["os::linux-apis"]

[dependencies]
# Error handling
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Time handling for glog format
chrono = "0.4"

# Async runtime
tokio = { version = "1", features = ["fs", "sync", "rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# gRPC support (optional, for grpc helpers)
tonic = { version = "0.14", optional = true }

# Security
caps = "0.5"

# Secure secret handling - prevents accidental logging, auto-zeroes memory on drop
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }

# Linux system calls and resource limits
nix = { version = "0.29", features = ["resource", "fs"] }

# eBPF support (optional, for kernel-level process attribution)
panoptes-ebpf-types = { path = "src/ebpf/types", features = ["user"], optional = true }
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[features]
default = []
# Enable mock implementations for testing
mock = []
# Enable gRPC streaming helpers (requires tonic)
grpc = ["tonic"]
# Enable eBPF support for kernel-level process attribution
# Requires: Linux 5.7+, BTF, CAP_BPF + CAP_PERFMON (or CAP_SYS_ADMIN)
ebpf = ["aya", "aya-log", "panoptes-ebpf-types"]
