[package]
name = "janusd"
version = "2.0.0"
edition = "2021"
rust-version = "1.82"
authors = ["Como Technologies, LTD <info@spectrocloud.com>"]
description = "Janus File Access Auditing Daemon (Rust implementation)"
license = "Apache-2.0"
repository = "https://github.com/como-technologies/panoptes"

[features]
default = []
# Enable eBPF-based process attribution (solves TOCTOU race on /proc lookups)
# Uses shared eBPF infrastructure from panoptes-common
ebpf = ["panoptes-common/ebpf"]

[dependencies]
# Shared Panoptes utilities (container runtime, proc parsing, session management)
panoptes-common = { path = "../common", features = ["grpc"] }

# Kernel syscalls - direct fanotify access
# socket feature added for safe netlink socket operations in audit.rs
nix = { version = "0.29", features = ["fanotify", "fs", "signal", "poll", "socket"] }
libc = "0.2"

# Async runtime (minimal features for smaller binary)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "signal", "io-util"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }

# Glob pattern matching
glob = "0.3"

# Linux capabilities (for security checks)
caps = "0.5"

# LRU cache for policy evaluation
lru = "0.16"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"
tokio-test = "0.4"

[[bench]]
name = "policy_evaluation"
harness = false

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true  # Catch integer overflow even in release builds

[lints.rust]
# Require explicit unsafe blocks even inside unsafe functions
unsafe_op_in_unsafe_fn = "deny"

[[bin]]
name = "janusd"
path = "src/main.rs"
