[package]
name = "argusd"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Como Technologies, LTD <info@spectrocloud.com>"]
description = "Argus File Integrity Monitoring Daemon (Rust implementation)"
license = "Apache-2.0"
repository = "https://github.com/como-technologies/panoptes"

[features]
default = []
# Enable eBPF-based file monitoring (requires CAP_BPF/CAP_SYS_ADMIN)
# Uses shared eBPF infrastructure from panoptes-common
ebpf = ["panoptes-common/ebpf"]

[dependencies]
# Shared Panoptes utilities (container runtime, proc parsing, session management)
# With ebpf feature: adds eBPF loader and shared types
panoptes-common = { path = "../../common/rust", features = ["grpc"] }

# Kernel syscalls - direct inotify access
nix = { version = "0.29", features = ["inotify", "fs", "signal", "poll"] }
libc = "0.2"

# Async runtime (minimal features for smaller binary)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "signal", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# gRPC
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }

# Glob pattern matching
glob = "0.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"
tokio-test = "0.4"

[[bench]]
name = "event_processing"
harness = false

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "argusd"
path = "src/main.rs"
