[package]
name = "janusd"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Como Technologies, LTD <info@spectrocloud.com>"]
description = "Janus File Access Auditing Daemon (Rust implementation)"
license = "Apache-2.0"
repository = "https://github.com/como-technologies/panoptes"

[dependencies]
# Kernel syscalls - direct fanotify access
nix = { version = "0.29", features = ["fanotify", "fs", "signal", "poll"] }
libc = "0.2"

# Async runtime
tokio = { version = "1", features = ["full", "sync", "fs", "signal"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }

# Glob pattern matching
glob = "0.3"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "janusd"
path = "src/main.rs"
